--- a/src/QuickStatus/QuickStatus.css
+++ b/src/QuickStatus/QuickStatus.css
@@ -31,5 +31,5 @@
     padding: 12px;
     align-items: center;
     justify-content: space-between;
-	display: flex ;
+	display: flex !important ;
 }
